--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,217 @@
-.App {
+* {
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
+  color: #444645;
+}
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  margin: 0;
+}
+
+.h1 {
+  margin: 0 auto;
   text-align: center;
+  margin-top: 30px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.btn {
+  display: block;
+  width: 300px;
+  margin: 0 auto;
+  margin-bottom: 15px;
+  margin-top: 30px;
+  text-align: center;
+  font-size: 18px;
+  cursor: pointer;
+  background-color: #28a745;
+  border: none;
+  border-radius: 30px;
+  color: white;
+  padding: 7px 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#add_user_form {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  position: fixed;
+  left: 50%;
+  top: 40%;
+  transform: translate(-50%, -45%);
+  max-width: 550px;
+  min-width: 300px;
+  margin: 0 auto;
+  background-color: #e5e5e5;
+  padding: 30px 30px 25px 30px;
+  border-radius: 45px;
+  z-index: 10;
+}
+
+.form_h3 {
+  text-align: center;
+  font-size: 18px;
+  padding: 0px 20px
+}
+
+.add_user_input {
+  margin: 5px 0 12px 0;
+  padding: 8px 5px;
+  font-family: 'Roboto', sans-serif;
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+  border: none;
+  text-align: center;
+  border-radius: 5px;
+}
+
+.add_user_btn {
+  width: 160px;
+  height: 45px;
+  margin: 0 auto;
+  margin-top: 20px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 17px;
+  cursor: pointer;
+  background-color: #28a745;
+  color: white;
+  border: none;
+  border-radius: 30px;
+}
+
+.add_user_btn:hover {
+  background-color: black
+}
+
+.error_message {
+  color: red;
+  font-size: 16px;
+  margin-bottom: 15px;
+  margin-top: 0;
+}
+
+.thanks_modal {
+  max-width: 500px;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 18px;
+  position: fixed;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #c2acac;
+  padding: 20px;
+  border-radius: 10px;
+  color: black;
+  z-index: 9;
+}
+
+.add_user_cross {
+  color: #fff;
+  cursor: pointer;
+  font-size: 45px;
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  width: 25px;
+  z-index: 55;
+}
+
+.confirm_form_cross {
+  font-size: 40px;
+  right: 6px;
+  top: -5px;
+}
+
+.form_wrapper {
+  background-color: rgba(0, 0, 0, .2);
+  height: 100%;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 9;
+}
+
+.btn:hover {
+  background-color: #218838;
+}
+
+.add_user_btn:hover {
+  background-color: #218838;
+}
+
+.btn_delete_user {
+  background-color: #fff2e8;
+  border: 1px solid #ffbb96;
+}
+
+.btn_delete_color {
+  color: #d4380d
+}
+
+.btn_delete_user:hover {
+  background-color: rgba(255, 0, 0, 0.762) !important;
+}
+
+.btn_edit_user {
+  background-color: #fd7e1433;
+  border: 1px solid #ffbb96;
+}
+
+.btn_edit_user:hover {
+  background-color: #fd7d1493 !important;
+}
+
+.btn_edit_color {
+  color: #d4630d;
+}
+
+.header {
+  height: 140px;
+  padding-left: 20px;
+  display: flex;
+  align-items: center;
+  background-color: #001529;
+}
+
+.header h1 {
+  color: #fff;
+  font-size: 24px;
+}
+
+.footer {
+  background-color: #001529;
+  height: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.footer-links a:hover {
+  color: #1890ff;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn_confirm,
+.btn_cancel {
+  background-color: #28a745;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 5px;
+  margin: 0 10px;
+}
+
+.btn_cancel {
+  background-color: #dc3545;
+}
+
+.btn_confirm:hover,
+.btn_cancel:hover {
+  opacity: 0.8;
 }
